[package]
name = "gravity"
version = "0.1.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embeddir = "0.1.1"
rand = "0.7.2"

[dependencies.sdl2]
version = "0.32.2"
features = ["ttf"]
